integration_tests/tests/integration_tests/snapshots/integration_tests__token_type_test__search_asset_with_token_type_fungible.snap
---
source: integration_tests/tests/integration_tests/token_type_test.rs
expression: response
---
{
  "total": 1,
  "limit": 1,
  "page": 1,
  "items": [
    {
      "interface": "FungibleToken",
      "id": "7EYnhQoR9YM3N7UoaKRoA44Uy8JeaZV3qyouov87awMs",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "https://gateway.irys.xyz/P8X64pGutyX5eyTpQmqZr3H4_Lqhm0IYxr5SyzFFNek",
        "files": [],
        "metadata": {
          "name": "Silly Dragon",
          "symbol": "SILLY",
          "token_standard": "Fungible"
        },
        "links": {}
      },
      "authorities": [
        {
          "address": "38qZKCqcphT5wDrVNJGHYcuenjEtEFPitvrqvMFQkPu7",
          "scopes": [
            "full"
          ]
        }
      ],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": true,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "token",
        "owner": "2oerfxddTpK5hWAmCMYB6fr9WvNrjEH54CHCWK8sAq7g"
      },
      "mutable": true,
      "burnt": false,
      "token_info": {
        "supply": 999913158412306321,
        "decimals": 9,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "balance": 95000000000,
        "associated_token_address": "6BRNfDfdq1nKyU1TQiCEQLWyPtD8EwUH9Kt2ahsbidUx"
      }
    }
  ]
}
